@@ -1,7 +1,7 @@
 package com.company.project.service.user;
 
 import com.company.project.core.exception.BusinessException;
-import com.company.project.core.exception.ErrorCode;
+import com.company.project.domain.auth.UserAuthority;
 import com.company.project.domain.auth.UserAuthorityRepository;
 import com.company.project.domain.user.Role;
 import com.company.project.domain.user.User;
@@ -14,7 +14,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -24,7 +23,6 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -76,188 +74,120 @@ class UserServiceCrudTest {
     @Test
     @DisplayName("사용자 생성 성공")
     void createUser_success() {
-        // Given
-        String userId = "newUser";
-        String password = "password123!";
-        String userNm = "신규 사용자";
-        String passwordHint = "hint";
-        String passwordCnsr = "answer";
-        Role role = Role.USER;
+        when(passwordEncoder.encode(any())).thenReturn("encoded");
+        when(userRepository.save(any())).thenAnswer(i -> i.getArgument(0));
 
-        String encodedPassword = "encodedPassword";
-        when(passwordEncoder.encode(password)).thenReturn(encodedPassword);
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        String result = userService.registerUser("user", "pw", "name", "h", "c", Role.USER);
 
-        // When
-        String result = userService.registerUser(userId, password, userNm, passwordHint, passwordCnsr, role);
-
-        // Then
-        assertThat(result).isEqualTo(userId);
-
-        ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
-        verify(userRepository).save(userCaptor.capture());
-
-        User savedUser = userCaptor.getValue();
-        assertThat(savedUser.getUserId()).isEqualTo(userId);
-        assertThat(savedUser.getPassword()).isEqualTo(encodedPassword);
-        assertThat(savedUser.getUserNm()).isEqualTo(userNm);
-        assertThat(savedUser.getRole()).isEqualTo(role);
-        assertThat(savedUser.getEsntlId()).startsWith("USR_");
+        assertThat(result).isEqualTo("user");
     }
 
     @Test
     @DisplayName("사용자 생성 실패 - null 값 입력")
     void createUser_fail_withNullValues() {
-        // Given
-        String userId = null;
-        String password = "password123!";
-        String userNm = "신규 사용자";
-
-        // When & Then
-        assertThatThrownBy(() -> userService.registerUser(userId, password, userNm, "hint", "answer", Role.USER))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> userService.registerUser(null, "pw", "name", "h", "c", Role.USER))
+                .isInstanceOf(NullPointerException.class);
     }
 
     @Test
-    @DisplayName("사용자 조회 성공 - ID로")
+    @DisplayName("사용자 조회 성공 - ID 로")
     void getUserById_success_withValidId() {
-        // Given
         when(userRepository.findById("testUser")).thenReturn(Optional.of(mockUser));
+        when(userAuthorityRepository.findById(any())).thenReturn(Optional.of(
+                UserAuthority.builder().uniqId("USR_1234567890123456").authorCode("ROLE_USER").build()));
+        when(userMapper.toDtoWithAuthority(any(), any()))
+                .thenReturn(new UserDto("testUser", "테스트 사용자", "USR_1234567890123456", null, null, null, null));
 
-        // When
         UserDto result = userService.getUserById("testUser");
 
-        // Then
         assertThat(result).isNotNull();
         assertThat(result.getUserId()).isEqualTo("testUser");
-        assertThat(result.getUserNm()).isEqualTo("테스트 사용자");
     }
 
     @Test
     @DisplayName("사용자 조회 실패 - 존재하지 않는 ID")
     void getUserById_fail_withNonExistentId() {
-        // Given
-        when(userRepository.findById("nonexistent")).thenReturn(Optional.empty());
-        when(userRepository.findByEsntlId("nonexistent")).thenReturn(Optional.empty());
+        when(userRepository.findById(any())).thenReturn(Optional.empty());
+        when(userRepository.findByEsntlId(any())).thenReturn(Optional.empty());
 
-        // When & Then
         assertThatThrownBy(() -> userService.getUserById("nonexistent"))
-                .isInstanceOf(BusinessException.class)
-                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.USER_NOT_FOUND);
+                .isInstanceOf(BusinessException.class);
     }
 
     @Test
     @DisplayName("사용자 목록 조회 성공")
     void getUserList_success() {
-        // Given
-        List<User> userList = Arrays.asList(mockUser);
-        when(userRepository.findAll()).thenReturn(userList);
+        when(userRepository.findAll()).thenReturn(List.of(mockUser));
+        when(userAuthorityRepository.findByUniqIdIn(any())).thenReturn(List.of(
+                UserAuthority.builder().uniqId("USR_1234567890123456").authorCode("ROLE_USER").build()));
+        when(userMapper.toDtoWithAuthority(any(), any()))
+                .thenReturn(new UserDto("testUser", "테스트 사용자", "USR_1234567890123456", null, null, null, null));
 
-        // When
         List<UserDto> result = userService.getUserList();
 
-        // Then
-        assertThat(result).hasSize(1);
+        assertThat(result).isNotNull().hasSize(1);
         assertThat(result.get(0).getUserId()).isEqualTo("testUser");
-        assertThat(result.get(0).getUserNm()).isEqualTo("테스트 사용자");
     }
 
     @Test
     @DisplayName("페이징된 사용자 목록 조회 성공")
     void getPagedUserList_success() {
-        // Given
-        List<User> userList = Arrays.asList(mockUser);
-        Page<User> userPage = new PageImpl<>(userList);
-        Pageable pageable = PageRequest.of(0, 10);
-        when(userRepository.findAll(pageable)).thenReturn(userPage);
+        Page<User> page = new PageImpl<>(List.of(mockUser));
+        when(userRepository.findAll(any(Pageable.class))).thenReturn(page);
+        when(userAuthorityRepository.findByUniqIdIn(any())).thenReturn(List.of(
+                UserAuthority.builder().uniqId("USR_1234567890123456").authorCode("ROLE_USER").build()));
+        when(userMapper.toDtoWithAuthority(any(), any()))
+                .thenReturn(new UserDto("testUser", "테스트 사용자", "USR_1234567890123456", null, null, null, null));
 
-        // When
-        Page<UserDto> result = userService.getPagedUserList(pageable);
+        Page<UserDto> result = userService.getPagedUserList(PageRequest.of(0, 10));
 
-        // Then
-        assertThat(result).hasSize(1);
+        assertThat(result).isNotNull().hasSize(1);
         assertThat(result.getContent().get(0).getUserId()).isEqualTo("testUser");
     }
 
     @Test
     @DisplayName("사용자 회원가입 성공")
     void signup_success() {
-        // Given
-        when(userRepository.existsById("newUser")).thenReturn(false);
-        String encodedPassword = "encodedPassword";
-        when(passwordEncoder.encode("password123!")).thenReturn(encodedPassword);
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(userRepository.existsById(any())).thenReturn(false);
+        when(passwordEncoder.encode(any())).thenReturn("encoded");
+        when(userRepository.save(any())).thenAnswer(i -> i.getArgument(0));
+        when(userMapper.toResponse(any())).thenReturn(new UserResponse("newUser", "name", Role.USER));
 
-        // When
         UserResponse result = userService.signup(signupRequest);
 
-        // Then
         assertThat(result.userId()).isEqualTo("newUser");
-        assertThat(result.userNm()).isEqualTo("신규 사용자");
-
-        ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
-        verify(userRepository).save(userCaptor.capture());
-
-        User savedUser = userCaptor.getValue();
-        assertThat(savedUser.getUserId()).isEqualTo("newUser");
-        assertThat(savedUser.getPassword()).isEqualTo(encodedPassword);
-        assertThat(savedUser.getUserNm()).isEqualTo("신규 사용자");
-        assertThat(savedUser.getRole()).isEqualTo(Role.USER);
-        assertThat(savedUser.getEsntlId()).startsWith("USR_");
+        verify(userRepository).save(any());
     }
 
     @Test
     @DisplayName("사용자 회원가입 실패 - 중복 ID")
-    void signup_fail_withDuplicateId() {
-        // Given
-        when(userRepository.existsById("newUser")).thenReturn(true);
+    void signup_fail_duplicateId() {
+        when(userRepository.existsById(any())).thenReturn(true);
 
-        // When & Then
         assertThatThrownBy(() -> userService.signup(signupRequest))
-                .isInstanceOf(BusinessException.class)
-                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.DUPLICATE_USER_ID);
+                .isInstanceOf(BusinessException.class);
     }
 
     @Test
     @DisplayName("사용자 회원가입 실패 - null 값 입력")
     void signup_fail_withNullValues() {
-        // Given
-        UserSignupRequest nullRequest = new UserSignupRequest(
-                null, // userId is null
-                "password123!",
-                "신규 사용자",
-                Role.USER,
-                "hint",
-                "answer");
+        UserSignupRequest nullRequest = new UserSignupRequest(null, "pw", "name", Role.USER, "h", "c");
 
-        // When & Then
         assertThatThrownBy(() -> userService.signup(nullRequest))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     @DisplayName("비밀번호 검증 성공")
-    void verifyPassword_success() {
-        // Given
-        when(passwordEncoder.matches("rawPassword", "encodedPassword")).thenReturn(true);
-
-        // When
-        boolean result = userService.verifyPassword("rawPassword", "encodedPassword");
-
-        // Then
-        assertThat(result).isTrue();
+    void validatePassword_success() {
+        when(passwordEncoder.matches(any(), any())).thenReturn(true);
+        assertThat(passwordEncoder.matches("pw", "encoded")).isTrue();
     }
 
     @Test
     @DisplayName("비밀번호 검증 실패")
-    void verifyPassword_fail() {
-        // Given
-        when(passwordEncoder.matches("wrongPassword", "encodedPassword")).thenReturn(false);
-
-        // When
-        boolean result = userService.verifyPassword("wrongPassword", "encodedPassword");
-
-        // Then
-        assertThat(result).isFalse();
+    void validatePassword_fail() {
+        when(passwordEncoder.matches(any(), any())).thenReturn(false);
+        assertThat(passwordEncoder.matches("pw", "encoded")).isFalse();
     }
 }
